# ballisticarc-tui

./: .gitignore  DECISIONS.md  DOGFOOD.md  Makefile  NOTICE  README.md  pyproject.toml  scorched_earth.py
ballisticarc_tui/: __init__.py  ai.py  app.py  sounds.py  sprites.py  state.py  tui.tcss
scorched_earth_tui/: __init__.py  ai.py  app.py  engine.py  screens.py  sounds.py  sprites.py  state.py  tui.tcss
screenshots/: README.md  endscreen.tcell  gameplay.tcell  hero.tcell
tests/: perf.py  playtest.py  qa.py
