[project]
name = "ballisticarc-tui"
version = "0.1.0"
description = "Terminal Scorched Earth with Textual — clean-room tribute to Wendell Hicken's 1991 classic"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.80,<10",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ballisticarc_tui"]

[tool.setuptools.package-data]
ballisticarc_tui = ["tui.tcss"]
